attempted fix for blurring scaling

--- a/cc/css/style2.css
+++ b/cc/css/style2.css
@@ -14,6 +14,10 @@
 
 .operatorCheckbox:hover {
 	transform: none;
+	image-rendering: auto;
+}
+.operatorCheckbox,
+.operatorCheckbox .name {
 	cursor: default;
 }
 
